Adding a production environment.

--- a/env/production.env
+++ b/env/production.env
@@ -1,2 +1,2 @@
 export CATPURR_ONE_APP_SIDEKIQ_REDIS_URL="redis://127.0.0.1:6500"
-export AWS_S3_BUCKET_NAME=howdooai.catpurrone-test
+export AWS_S3_BUCKET_NAME=howdooai.catpurrone-production
