make it easier to update and publish lambda function.

--- a/env/production.env
+++ b/env/production.env
@@ -1,2 +1,3 @@
 export CATPURR_ONE_SIDEKIQ_REDIS_URL="redis://127.0.0.1:6500"
 export CATPURR_ONE_AWS_S3_BUCKET_NAME=howdooai.catpurrone-production
+export AWS_DEFAULT_REGION=us-east-1
