--- a/env/development.env
+++ b/env/development.env
@@ -1,2 +1,3 @@
 export CATPURR_ONE_SIDEKIQ_REDIS_URL="redis://127.0.0.1:6500"
 export AWS_S3_BUCKET_NAME=howdooai.catpurrone-test
+export AWS_DEFAULT_REGION=us-east-1
